# background_updater

./: CMakeLists.txt  conanfile.txt
source/: CMakeLists.txt  application.cpp  application.h  bytes_array.cpp  bytes_array.h  cli.cpp  cli.h  cli_command.h  cli_terminal.cpp  cli_terminal.h  curl_download_service.cpp  curl_download_service.h  desktop_update_service.h  desktop_updater.h  download_service.h  gnome_change_background_command.cpp  gnome_change_background_command.h  gnome_update_service.cpp  gnome_update_service.h  i_scheduler.h  image.cpp  image.h  image_provider.h  image_resolver.cpp  image_resolver.h  main.cpp  scheduler.cpp  scheduler.h  utils.h  web_image_provider.cpp  web_image_provider.h
test/: CMakeLists.txt  bytes_test.cpp
